# Cvaluate

./: CMakeLists.txt  Readme.md
.github/workflows/: ci.yml
cmake/: cvaluateConfig.cmake
cmake/modules/: FindExtPackages.cmake
cvaluate/: CMakeLists.txt  EvaluableExpression.cpp  EvaluableExpression.h  EvaluationStage.cpp  EvaluationStage.h  Exception.h  OperatorSymbol.cpp  OperatorSymbol.h  Parising.h  Parsing.cpp  StagePlanner.cpp  StagePlanner.h  Token.cpp  Token.h  TokenStream.h  pch.cpp  pch.h
include/cvaluate/: EvaluableExpression.h  EvaluationStage.h  Exception.h  OperatorSymbol.h  Parising.h  StagePlanner.h  Token.h  TokenStream.h  cvaluate.h
tests/: CMakeLists.txt  evaluation_test.cpp  parsing_test.cpp  test_config.h
tests/benchmarks/: CMakeLists.txt  cvaluate_benchmark.cpp
tests/profiling/: CMakeLists.txt  main.cpp
